kernel/atomgit/MIPS VPE导出函数缺少原型导致编译警告.txt
#标题
MIPS VPE导出函数缺少原型导致编译警告

#内核版本
OLK-6.6

#问题现象
在使能了 `-Werror=missing-prototypes` 编译选项的环境下编译 MIPS 架构内核时，编译过程因遇到多个“no previous prototype”错误而中断，导致内核构建失败。

#主要错误日志
arch/mips/kernel/vpe-mt.c:180:7: error: no previous prototype for 'vpe_alloc' [-Werror=missing-prototypes]
  180 | void *vpe_alloc(void)
      |       ^~~~~~~~~
arch/mips/kernel/vpe-mt.c:198:5: error: no previous prototype for 'vpe_start' [-Werror=missing-prototypes]
  198 | int vpe_start(void *vpe, unsigned long start)
      |     ^~~~~~~~~
arch/mips/kernel/vpe-mt.c:208:5: error: no previous prototype for 'vpe_stop' [-Werror=missing-prototypes]
  208 | int vpe_stop(void *vpe)
      |     ^~~~~~~~
arch/mips/kernel/vpe-mt.c:229:5: error: no previous prototype for 'vpe_free' [-Werror=missing-prototypes]
  229 | int vpe_free(void *vpe)
      |     ^~~~~~~~

#问题根因
`vpe_alloc`、`vpe_start`、`vpe_stop` 和 `vpe_free` 这几个函数在代码中进行了导出（exported），但在相应的头文件中并没有定义它们的函数原型，导致编译器无法找到函数声明。

#解决方案
在头文件 `arch/mips/include/asm/vpe.h` 中补充缺失的函数原型声明。具体修改为：在 `CONFIG_MIPS_VPE_LOADER_MT` 配置宏保护下，添加上述四个函数的原型声明。

#来源
https://atomgit.com/openeuler/kernel/commit/75b8a40cba7000b8b5ae787aa81346d3fda3ca17